changed getPlayer function
